<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="sopify_streamer">Sopify Streamer</string>
    <string name="super_duo">Super Duo</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
    <string name="app_header">My Nano degree Apps!</string>
    <string name="sopify_streamer_message">This button will launch Streamer app</string>
    <string name="super_duo_message">This button will launch Super Duo app</string>
    <string name="build_it_bigger_message">This button will launch Build it bigger app</string>
    <string name="xyz_reader_message">This button will launch XYZ reader app</string>
    <string name="capstone_message">This button will launch Capstone app</string>
    <string name="default_message">Other item clicked</string>
    <string name="sort_by_popular">Sort by most popular</string>
    <string name="sort_by_highest_rated">Sort by highest rated</string>
    <string name="vote_average">Rating : %s</string>
    <string name="released_date">Released On : %s</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="movie_details">Movie Details</string>
    <string name="no_network">No network</string>
    <string name="response_failed">Response failed</string>
    <string name="movie_detail_image">Movie Detail Image</string>
    <string name="movie_poster_image">Movie Poster Image</string>
</resources>
