<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header"
            style="@style/app_header_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:text="@string/app_header" />

        <Button
            android:id="@+id/sopify_streamer"
            style="@style/button_style_orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/sopify_streamer" />

        <Button
            android:id="@+id/super_duo"
            style="@style/button_style_orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sopify_streamer"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/super_duo" />


        <Button
            android:id="@+id/build_it_bigger"
            style="@style/button_style_orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/super_duo"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/xyz_reader"
            style="@style/button_style_orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/build_it_bigger"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/xyz_reader" />

        <Button
            android:id="@+id/capstone"
            style="@style/button_style_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/xyz_reader"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/capstone" />
    </RelativeLayout>
</ScrollView>