<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="clickHandler"
            type="android.view.View.OnClickListener"/>
    </data>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".activity.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <!--<include layout="@layout/content_main"/>-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".activity.MainActivity"
            tools:showIn="@layout/activity_main">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/header"
                    style="@style/app_header_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/app_header" />

                <Button
                    android:id="@+id/sopifyStreamer"
                    style="@style/button_style_orange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/header"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/sopify_streamer" />

                <Button
                    android:id="@+id/superDuo"
                    style="@style/button_style_orange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sopifyStreamer"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/super_duo" />


                <Button
                    android:id="@+id/build_it_bigger"
                    style="@style/button_style_orange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/superDuo"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/build_it_bigger" />

                <Button
                    android:id="@+id/xyzReader"
                    style="@style/button_style_orange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/build_it_bigger"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/xyz_reader" />

                <Button
                    android:id="@+id/capstone"
                    style="@style/button_style_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/xyzReader"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/capstone" />
            </RelativeLayout>
        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>